--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,5 +1,5 @@
 body { 
-    background-image: url(/static/img/background.jpg);
+    background-image: url("/static/img/background.jpg");
     background-position: left top;
     background-repeat: repeat;
 }
